<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:id="@+id/root"
    android:focusableInTouchMode="true">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:focusableInTouchMode="true"
        android:focusable="false">

        <AutoCompleteTextView
            android:id="@+id/rss_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:completionThreshold="1"
            android:hint="@string/rss"
            android:imeOptions="actionDone"
            android:inputType="textUri"
            android:text="@string/default_url"
            android:textColor="@color/colorAccent"
            android:layout_marginEnd="48dp"
            android:layout_marginStart="48dp"/>

        <TextView
            android:id="@+id/rss_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:text="@string/no_rss"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginEnd="48dp"
            android:layout_marginStart="48dp"/>

        <ImageButton
            android:id="@+id/rss_button"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:background="#00FFFFFF"
            android:onClick="rssOnClick"
            android:src="@drawable/ic_rss"
            android:contentDescription="@string/info_button" />

        <ImageButton
            android:id="@+id/info_button"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="#00FFFFFF"
            android:onClick="infoOnClick"
            android:src="@drawable/ic_info"
            android:contentDescription="@string/rss_button" />
    </FrameLayout>
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/swipe_refresh">
    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/feed_layout"
        android:id="@+id/list_view"/>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</LinearLayout>